Fix chrome windows scrollbar colors in dark mode

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -9,6 +9,7 @@ body {
 @media screen and (prefers-color-scheme: dark) {
     html, body {
         background-color: #121212;
+        color-scheme: dark;
     }
 }
 
